Review comments PM
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/documentation/api/io.strimzi.api.kafka.model.kafka.listener.GenericKafkaListener.adoc
+++ b/documentation/api/io.strimzi.api.kafka.model.kafka.listener.GenericKafkaListener.adoc
@@ -126,8 +126,8 @@ spec:
 ----
 ingress:: Configures an external listener to expose Kafka using Kubernetes `Ingress` and the {NginxIngressController}.
 +
-NOTE: The `ingress` listener type is deprecated as the {NginxIngressController} is archived since March 2026.
-There is currently no plan to remove the code from the Strimzi code base, but we do not plan any further improvements.
+IMPORTANT: The `ingress` listener type is deprecated because the {NginxIngressController} has been archived since March 2026.
+Although the related code remains in the Strimzi codebase, it is no longer maintained, and no further enhancements or development are planned.
 +
 A dedicated `Ingress` resource is created for every Kafka broker pod.
 An additional `Ingress` resource is created to serve as a Kafka bootstrap address.
