--- a/documentation/modules/metrics/proc-strimzi-metrics-reporter-kafka-deploy-options.adoc
+++ b/documentation/modules/metrics/proc-strimzi-metrics-reporter-kafka-deploy-options.adoc
@@ -77,6 +77,6 @@ spec:
           - "kafka.network.*"
 ----
 
-* `metricsConfig`: Enbales exposing metrics using the Strimzi Metrics Reporter.
+* `metricsConfig`: Enables exposing metrics using the Strimzi Metrics Reporter.
 * `metricsConfig.values.allowList`: List of regular expression patterns that filter the metrics to collect. 
 The default value is `.*`, which allows all metrics.
