Implement selective pod metadata patching in StrimziPodSetController
This change adds support for in-place patching of Pod metadata (labels
and annotations) without requiring a rolling restart. Previously, any
change to a Pod would trigger a rolling update; now metadata-only
changes are applied via Strategic Merge Patch.

Changes:
- Add PodDiff utility class to categorize changes as NONE, METADATA_ONLY,
  or REQUIRES_RESTART
- Add patchPodMetadata() helper method to StrimziPodSetController
- Modify maybeCreateOrPatchPod() to use PodDiff for detecting changes
- Add comprehensive unit tests for PodDiff
- Remove TODO comment at line 466

Signed-off-by: Said BOUDJELDA <bmscomp@gmail.com>

--- a/documentation/modules/configuring/con-pod-management.adoc
+++ b/documentation/modules/configuring/con-pod-management.adoc
@@ -14,4 +14,13 @@ You must not create, update, or delete `StrimziPodSet` resources.
 The `StrimziPodSet` custom resource is used internally and resources are managed solely by the Cluster Operator.
 As a consequence, the Cluster Operator must be running properly to avoid the possibility of pods not starting and Kafka clusters not being available.
 
+== Selective pod metadata patching
+
+The `StrimziPodSetController` supports in-place patching of pod metadata (labels and annotations) without requiring a rolling restart.
+When you update labels or annotations in your Kafka, Kafka Connect, or MirrorMaker 2 custom resources, the Cluster Operator detects whether these are metadata-only changes.
+If a change affects only the pod metadata and not the pod specification, the controller applies the update directly using a strategic merge patch instead of triggering a rolling update.
+This optimization improves operational efficiency by avoiding unnecessary pod restarts for common operational changes like adding monitoring labels or updating annotations.
+
+NOTE: Changes to the pod specification (such as container images, resource limits, or volumes) still require a rolling restart to apply.
+
 NOTE: Kubernetes `Deployment` resources are used for creating and managing the pods of other components.
