--- a/documentation/api/io.strimzi.api.kafka.model.kafka.listener.GenericKafkaListener.adoc
+++ b/documentation/api/io.strimzi.api.kafka.model.kafka.listener.GenericKafkaListener.adoc
@@ -126,6 +126,9 @@ spec:
 ----
 ingress:: Configures an external listener to expose Kafka using Kubernetes `Ingress` and the {NginxIngressController}.
 +
+IMPORTANT: The `ingress` listener type is deprecated because the {NginxIngressController} has been archived since March 2026.
+Although the related code remains in the Strimzi codebase, it is no longer maintained, and no further enhancements or development are planned.
++
 A dedicated `Ingress` resource is created for every Kafka broker pod.
 An additional `Ingress` resource is created to serve as a Kafka bootstrap address.
 Kafka clients can use these `Ingress` resources to connect to Kafka on port 443.
